apps/base/webb/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webb-http
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-http
  hostnames:
    - webb.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webb-https
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-https
  hostnames:
    - webb.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: umami
          namespace: apps
          port: 3000
